--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -662,7 +662,52 @@
                         console.log("k, v");
                         console.log(k, v);
 
-                        modal.append("<input type='checkbox' name='relatedcomps' value='" + v["id"] + "'>" + v['name'] + "<br/>");
+                        modal.append(`                            <div id="panel-{{ forloop.counter }}" class="panel panel-default">
+                                <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
+                                    <h4 id="panel-{{ forloop.counter }}-title" class="panel-title">
+                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">
+                                            <span id="producer_element-panel_num-title">"producer_element_name"</span>&nbsp;
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="document-{{ forloop.counter }}-body" class="panel-collapse collapse" role="tabpanel" aria-labelledby="document-{{ forloop.counter }}-title">
+                                    <div class="panel-body">
+                                        <div class="smt_block">
+                                            <form id="smt_{{ forloop.counter }}" class="smt_form">
+                                                <div class="form-group">
+                                                    <ul>
+                                                        statement id : smt_id
+                                                    </ul>
+                                                    <ul>
+                                                        statement sid : smt_sid
+                                                    </ul>
+                                                    <ul>
+                                                        statement sid class : smt_sid_class
+                                                    </ul>
+                                                    <ul>
+                                                        statement body : smt_body
+                                                    </ul>
+                                                    <ul>
+                                                        statement pid :
+                                                    </ul>
+                                                    <ul>
+                                                        statement status : {% if smt_status != "" and smt_status is not None %}{{ smt_status }}{% else %}TBD{% endif %}
+                                                    </ul>
+                                                </div>
+
+                                                <div class="modal-footer">
+                                                    <div id="success-msg-smt_{{ forloop.counter }}" style="display: inline; margin-right: 20px; color: gray;"></div>
+                                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">Close</a>&nbsp;
+                                                    Select this implementation statement: <input type='checkbox' name='relatedcomps' value='smt_id'>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+`.replace(/smt_id/g, v['smt_id']).replace(/smt_sid_class/g, v['smt_sid_class']).replace(/smt_sid/g, v['smt_sid']).replace(/producer_element_name/g, v['producer_element_name']).replace(/smt_body/g, v['smt_body']).replace(/smt_pid/g, v['smt_pid']).replace(/smt_status/g, v['smt_status'])
+)
+                        {#modal.append("<input type='checkbox' name='relatedcomps' value='" + v["id"] + "'>" + v['name'] + v['body'] + v['pid'] + "<br/>");#}
                     });
 
                 }
