--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -325,7 +325,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title" id="related_title">Select component statements related to (selected)</h4>
+                                    <h2 class="modal-title" id="related_title">Select component statements related to (selected)</h2>
                                 </div>
 
                                 <div class="form-group">
@@ -669,7 +669,7 @@
                                 <div class="panel-heading" role="tab" id="document-loopcount-title">
                                     <h4 id="related-panel-loopcount-title" class="panel-title">
                                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#related-document-loopcount-body" aria-expanded="false" aria-controls="related-document-loopcount-body">
-                                             <span id="producer_element-panel_num-title">"producer_element_name"</span>&nbsp;
+                                             <span id="producer_element-panel_num-title">producer_element_name</span>
                                         </a>
                                     </h4>
                                 </div>
