--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -116,16 +116,34 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 }
 
 /* New CSS based on removing inline CSS */
+.btn-sm { width:95%; max-width:180px;  } /* this makes the action buttons all the same width.
+
+/* misc templates */
+
+.question-source-invitation { margin-bottom: 2em; }
+.question-source-invitation-show { text-align: right; margin-bottom: -1.5em; }
+.question-source-invitation-link { color: #448; font-size: 85%; }
+.question-example-answer { margin: 35px 0; font-size: 80%; border-left: 2px solid #CCC; padding-left: 8px; }
+.question-example-answer-expand { max-height: 4.25em; overflow: hidden; }
+.question-example-small { color: #666; }
+.question-toggle { text-align: left; font-style: italic; font-size: 90%; }
+.question-reference-text { font-size: 80%; color: #666; }
+.question-reference-well { display: none; font-size: 80%; }
+.question-form-style { width: auto; display: inline-block; }
+.question-choice { margin: 1em 0 1.5em 0; }
+.question-yesno { margin: 1em 0 1.5em 0; }
+.question-multiple-choice { margin: 1em 0 1.5em 0; }
+.question-datagrid { margin: 1em 0 1.5em 0; }
+.question-file { margin: 1em 0; }
+.question-current-answer { color: #666; }
+
 
 /* within navbar and base.html */
 .navbar-brand img { margin: -2px 20px; width:110px; }
 .dropdown-menu { width: 300px; }
-
 .nav-dropdown-item-text { margin: 0px 12px 8px 20px; }
 .nav-profile { margin: -5px 5px; }
-
 .message-margin { margin-top: 1em; }
-
 .footer-row { width: 768px; margin: auto; border-top: 1px solid #eee; padding-top: 24px; }
 
 .invite-message-size { width: 100%; height: 4em; }
@@ -136,14 +154,9 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 .left-text { text-align: left; }
 
 .form-by-email { margin-right: 1em; display: none; }
-
 .form-group-margin { margin-right: 1em; }
 .form-checkbox { margin-top: 1em; }
-
 .modal-text { margin: 1em 0 2em 0; }
-
-
-
 .form-email-width { width: 25em; }
 
 .no-display { display: none; }
