--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -194,21 +194,20 @@ Compliance Apps
             {# If the user can only start the app in a single organization context, we can offer a quick start button. #}
             {% if app.organizations|length >= 1 %}
 
-            <form action="/store/{{app.key|urlencode}}{{forward_qsargs}}" method="post" style="display: inline-block;">
-              {% csrf_token %}
-                         <select id="app-org-select" class="" onchange="update_org_choice(event)">
-                  {% for org in app.organizations %}
-                      <option value="{{ org.slug }}">{{ org }}</option>
-                  {% endfor %}
-              </select>
-{#            select for organizations and then update first_org value#}
-                          {% with app.organizations|first as first_org %}
-                <input  type="hidden" id="{{ app.key }}/organization_{{ forloop.counter }}" name="organization" value="{{first_org.slug}}">
-            {% endwith %}
-              <button type="submit" class="btn btn-success btn-sm start-app">
-                Add ►
-              </button>&nbsp;
-            </form>
+                <form action="/store/{{ app.key|urlencode }}{{ forward_qsargs }}" method="post" style="display: inline-block;">
+                    {% csrf_token %}
+                    <select id="app-org-select" class="" onchange="update_org_choice('{{ app.key }}/organization_{{ forloop.counter }}', event)">
+                        {% for org in app.organizations %}
+                            <option value="{{ org.slug }}">{{ org }}</option>
+                        {% endfor %}
+                    </select>
+                    {% with app.organizations|first as first_org %}
+                        <input type="hidden" id="{{ app.key }}/organization_{{ forloop.counter }}" name="organization" value="{{ first_org.slug }}">
+                    {% endwith %}
+                    <button type="submit" class="btn btn-success btn-sm start-app">
+                        Add ►
+                    </button>&nbsp;
+                </form>
             {% endif %}
             <a href="/store/{{app.key|urlencode}}{{forward_qsargs}}" class="btn btn-default btn-sm view-app">Info</a>
 
@@ -257,11 +256,9 @@ Compliance Apps
 {% endblock %}
 
 {% block scripts %}
-<script>function update_org_choice(event) {
-    console.log(event)
-        document.getElementById("testorgdaveslug/light_ato_apps/organization_1").value = event.target.value
-
-}
+    <script>function update_org_choice(comporg, event) {
+        document.getElementById(comporg).value = event.target.value
+    }
 
 RegExp.escape = function(s) {
   // http://stackoverflow.com/a/18151038
