removed inline CSS

--- a/templates/question.html
+++ b/templates/question.html
@@ -176,8 +176,7 @@ label:hover .onhover { display: inline; }
                     {% endfor %}
                   </div>
                 </div>
-                <div class="toggler"
-                     style="question-toggle">
+                <div class="toggler question-toggle">
                   <a
                      href="#more"
                      onclick="$(this).parents('.expandable').find('.expandy').data('original-height', $(this).parents('.expandable').find('.expandy').height()); $(this).parents('.expandable').find('.expandy').animate({ minHeight: $(this).parents('.expandable').find('.expandy>div').outerHeight() + $(this).parents('.expandable').find('.toggler').outerHeight() }); $(this).parents('.expandable').find('a[href=&quot;#more&quot;]').hide(); $(this).parents('.expandable').find('a[href=&quot;#less&quot;]').show(); return false;">Show more</a>
@@ -334,7 +333,7 @@ label:hover .onhover { display: inline; }
               <div class="question-multiple-choice">
               {% for choice in q.spec.choices %}
               <div class="checkbox">
-                <label style="text-align: left;">
+                <label class="left-text">
                   <input name="value" value="{{choice.key}}" type="checkbox" {% if choice.key in answer %}checked{% endif %}> {{choice.text}}
                   <p class="help-block">{{choice.help}}</p>
                 </label>
@@ -399,9 +398,8 @@ label:hover .onhover { display: inline; }
               {% endif %}
 
               <div class="form-group">
-                <input name="value" type="file" id="inputctrl" class="form-control"
-                  style="width: auto; border:  none; padding: 0; display: inline-block"/>
-                <input type="reset" value="x" style="font-size: 14px;">
+                <input name="value" type="file" id="inputctrl" class="form-control question-form-group"/>
+                <input type="reset" value="x" class="question-input-font">
                 <p class="help-block">{{q.spec.help}}</p>
               </div>
 
@@ -433,14 +431,14 @@ label:hover .onhover { display: inline; }
 
                         {% if answer_tasks_show_user %}Edited by {% if m.editor == request.user %}you{% else %}{{m.editor}}{% endif %}; {% endif %}{{m.get_status_display}}.
 
-                        <a href="{{m.get_absolute_url}}" class="onhover" style="color: #999; margin-left: 3px; font-size: 90%;"><span class="glyphicon glyphicon-pencil"> </span></a>
+                        <a href="{{m.get_absolute_url}}" class="onhover question-absolute-url"><span class="glyphicon glyphicon-pencil"> </span></a>
                       </div>
                       {% endwith %}
                   </label>
                 </div>
               {% endfor %}
 
-              <div class="radio" style="margin-bottom: 1.5em">
+              <div class="radio question-radio">
                 <label>
                   <input name="value" value="__new" type="radio">
                   {% if current_answer %}
@@ -493,7 +491,7 @@ label:hover .onhover { display: inline; }
                       {% if not task.project.is_account_project %} {# discussions can't be tied to answers of tasks that aren't in a project #}
                         <button id="start-a-discussion" onclick="start_a_discussion();" type=button data-toggleable=false>
                             {# if you can see this page, you can start a conversation #}
-                            <span class="glyphicon glyphicon-comment" style="color: #56A;"></span> Discuss
+                            <span class="glyphicon glyphicon-comment question-glyphicon-comment"></span> Discuss
                         </button>
                       {% endif %}
                       {% if task.can_transfer_owner and write_priv %}
@@ -528,7 +526,7 @@ label:hover .onhover { display: inline; }
                   {# This is DEBUG functionality for reverting a question to an un-answered state, which differs from being answered but with null via the Skip/Clear button. #}
                   {% if answer_obj and DEBUG %}
                     <button id="clear-button"
-                      type="submit" class="btn btn-link" style="color: #999; font-size: 0.9em;"
+                      type="submit" class="btn btn-link question-button"
                       onclick="$('#question > form input[name=method]').val('clear')">
                         Mark as Unanswered
                         <!-- &raquo; -->
@@ -536,9 +534,9 @@ label:hover .onhover { display: inline; }
                   {% endif %}
                 </div> {# /.pull-left #}
 
-                <div class="pull-right" style="margin-top: -10px;">
+                <div class="pull-right question-can-review">
                   {% if answer_obj and can_review %}
-                  <select style="display: block; margin: 1em 0; font-size: 80%; background-color: white; padding: .2em .2em .15em .2em" onchange="update_review_status(this)">
+                  <select class="question-select-review" onchange="update_review_status(this)">
                     {% for key, label in review_choices %}
                       <option value="{{key}}" {% if answer_obj.reviewed == key %}selected{% endif %}>
                         {{label}}
@@ -555,7 +553,7 @@ label:hover .onhover { display: inline; }
             {% if answer_obj %}
               {% for key, label in review_choices %}
                 {% if answer_obj.reviewed == key %}
-                  <p style="margin-top: 1em; font-size: 85%; color: #666">This question&rsquo;s review status is {{label}}.</p>
+                  <p class="question-review-status">This question&rsquo;s review status is {{label}}.</p>
                 {% endif %}
               {% endfor %}
             {% endif %}
@@ -574,8 +572,7 @@ label:hover .onhover { display: inline; }
     &nbsp;
   </div>
 
-  <div id="progress-project-area-wrapper" class="col-xs-8 col-sm-6 col-md-3 col-lg-3 col-xl-2"
-       style="background-color: #fff; border-radius: 6px;">
+  <div id="progress-project-area-wrapper" class="col-xs-8 col-sm-6 col-md-3 col-lg-3 col-xl-2 question-progress-project">
     {% include "task-progress-project-list.html" with previous="question" %}
   </div>
 
