css from task question debug

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -126,6 +126,9 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 .task-progress-project-title { color: black; font-size: 1.0em; text-align: left; }
 .task-progress-project-truncate-link { color: black; }
 
+.task-question-debug-links { color: #999; font-size: 80%; margin-top: 20px; }
+
+
 
 .question-source-invitation { margin-bottom: 2em; }
 .question-source-invitation-show { text-align: right; margin-bottom: -1.5em; }
