--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -192,23 +192,24 @@ Compliance Apps
           {% endif %}
           <div class="app-quick-start-form">
             {# If the user can only start the app in a single organization context, we can offer a quick start button. #}
-            {% if app.organizations|length >= 1 %}
-
-                <form action="/store/{{ app.key|urlencode }}{{ forward_qsargs }}" method="post" style="display: inline-block;">
-                    {% csrf_token %}
-                    <select id="app-org-select" class="" onchange="update_org_choice('{{ app.key }}/organization_{{ forloop.counter }}', event)">
-                        {% for org in app.organizations %}
-                            <option value="{{ org.slug }}">{{ org }}</option>
-                        {% endfor %}
-                    </select>
-                    {% with app.organizations|first as first_org %}
-                        <input type="hidden" id="{{ app.key }}/organization_{{ forloop.counter }}" name="organization" value="{{ first_org.slug }}">
-                    {% endwith %}
-                    <button type="submit" class="btn btn-success btn-sm start-app">
-                        Add ►
-                    </button>&nbsp;
-                </form>
-            {% endif %}
+              {% if app.organizations|length >= 1 %}
+                  <form action="/store/{{ app.key|urlencode }}{{ forward_qsargs }}" method="post" style="display: inline-block;">
+                      {% csrf_token %}
+                      {% if app.organizations|length > 1 %}
+                          <select id="app-org-select" class="" onchange="update_org_choice('{{ app.key }}/organization_{{ forloop.counter }}', event)">
+                              {% for org in app.organizations %}
+                                  <option value="{{ org.slug }}">{{ org }}</option>
+                              {% endfor %}
+                          </select>
+                      {% endif %}
+                      {% with app.organizations|first as first_org %}
+                          <input type="hidden" id="{{ app.key }}/organization_{{ forloop.counter }}" name="organization" value="{{ first_org.slug }}">
+                      {% endwith %}
+                      <button type="submit" class="btn btn-success btn-sm start-app">
+                          Add ►
+                      </button>&nbsp;
+                  </form>
+              {% endif %}
             <a href="/store/{{app.key|urlencode}}{{forward_qsargs}}" class="btn btn-default btn-sm view-app">Info</a>
 
           </div>
