initial portfolio management items

--- a/templates/base-conditional.html
+++ b/templates/base-conditional.html
@@ -109,6 +109,7 @@
     {% include "bootstrap-helpers.html" %}
 
     {% include "portfolios/select-portfolio-modal.html" %}
+    {% include "portfolios/manage_portfolio_modal.html" %}
 
     <div id="invitation_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
       <div class="modal-dialog">
