--- a/templates/components/import-component-modal.html
+++ b/templates/components/import-component-modal.html
@@ -5,9 +5,14 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="invitation_modal_title">Import OSCAL Component</h4>
       </div>
-      <form action="{% url 'import_component' %}" role="form" method="POST">{% csrf_token %}
+      <form id="" action="{% url 'import_component' %}" role="form" method="POST">{% csrf_token %}
         <div class="modal-body">
-          {{ import_form.as_p }}
+          <label for="{{import_form.file.id_auto}}">{{ import_form.file.label }}:</label>
+          {{ import_form.file }}
+          <br>
+          <label for="{{import_form.json_content.id_auto}}">{{ import_form.json_content.label }}:</label>
+          <br>
+          {{ import_form.json_content }}
          <div class="modal-footer">
            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
            <input id="import_component_submit" class="btn btn-success btn-submit" type="submit" value="Import" />
@@ -23,6 +28,14 @@
   function show_import_component_modal(callback) {
     var m = $('#import_component_modal');
     m.modal();
+  }
+  function fillJSONContent(file) {
+    filecontents = $('#{{import_form.file.auto_id}}').prop('files')[0];
+    var reader = new FileReader();
+    reader.readAsText(filecontents);
+    reader.onload = function(e) {
+        $('#{{import_form.json_content.auto_id}}').val(e.target.result);
+    };
   }
 </script>
 {% endblock %}
